Ajout du bouton charger plus

--- a/video-game-website/src/index.html
+++ b/video-game-website/src/index.html
@@ -18,6 +18,7 @@
         <h2>Liste des Jeux</h2>
         <ul id="games"></ul>
       </section>
+      <button id="loadMore">Charger plus</button>
     </main>
     <footer>
       <p>&copy; 2023 Site de Jeux Vidéo</p>
