--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Site de Jeux Vidéo</title>
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
@@ -23,6 +23,6 @@
     <footer>
       <p>&copy; 2023 Site de Jeux Vidéo</p>
     </footer>
-    <script src="scripts/app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
