Ajout de la modale pour afficher les détails des jeux

--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
       </section>
       <button id="loadMore">Charger plus</button>
     </main>
+    <!-- Modale pour les détails des jeux -->
+    <div id="gameModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2 id="modalTitle">Titre du jeu</h2>
+        <img id="modalImage" src="" alt="Image du jeu" />
+        <p id="modalDescription">Description du jeu...</p>
+        <p id="modalGenres">Genres : ...</p>
+        <p id="modalPlatforms">Plateformes : ...</p>
+      </div>
+    </div>
     <footer>
       <p>&copy; 2023 Site de Jeux Vidéo</p>
     </footer>
