Ajout du champ de recherche pour filtrer les jeux dans la liste

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <main>
       <section id="gameList">
         <h2>Liste des Jeux</h2>
+        <div id="search-container">
+          <input type="text" id="search" placeholder="Rechercher un jeu..." />
+        </div>
         <ul id="games"></ul>
       </section>
       <button id="loadMore">Charger plus</button>
